{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 126,
  "lineage": "e523089b-5267-17ce-aec7-bbaf497164e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.100",
            "association_id": "eipassoc-0a62301d2b81407fc",
            "domain": "vpc",
            "id": "eipalloc-0c209fcdd46d4cfe4",
            "instance": "i-093eef6a072f6afc2",
            "network_border_group": "us-east-2",
            "network_interface": "eni-023ec44109354b5bc",
            "private_dns": "ip-10-0-1-100.us-east-2.compute.internal",
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-3-131-44-141.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.44.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.my_webapp",
            "aws_internet_gateway.igw",
            "aws_network_interface.webapp_Interface",
            "aws_security_group.allow_web",
            "aws_subnet.subnet_webapp",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00138b07206d4ceaf",
            "arn": "arn:aws:ec2:us-east-2:271242279374:instance/i-093eef6a072f6afc2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093eef6a072f6afc2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-023ec44109354b5bc"
              }
            ],
            "primary_network_interface_id": "eni-023ec44109354b5bc",
            "private_dns": "ip-10-0-1-100.us-east-2.compute.internal",
            "private_ip": "10.0.1.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e933e9c3f756dd36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042ac7b40aa9885c2",
            "tags": {
              "Name": "my_webapp_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09f7461a4bc8b60c8"
            ]
          },
          "dependencies": [
            "aws_network_interface.webapp_Interface",
            "aws_security_group.allow_web",
            "aws_subnet.subnet_webapp",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:271242279374:internet-gateway/igw-0c004a6077c491847",
            "id": "igw-0c004a6077c491847",
            "owner_id": "271242279374",
            "vpc_id": "vpc-0e5cd154846bea213"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webapp_Interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-023ec44109354b5bc",
            "ipv6_address_count": 0,
            "mac_address": "02:e4:db:75:88:b8",
            "private_ip": "10.0.1.100",
            "private_ips": [
              "10.0.1.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09f7461a4bc8b60c8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042ac7b40aa9885c2"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet_webapp",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00425e9308bbdf73b",
            "owner_id": "271242279374",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c004a6077c491847",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c004a6077c491847",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT"
            },
            "vpc_id": "vpc-0e5cd154846bea213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Route-Assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05816845b144e931b",
            "route_table_id": "rtb-00425e9308bbdf73b",
            "subnet_id": "subnet-042ac7b40aa9885c2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Public_RT",
            "aws_subnet.subnet_webapp",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:271242279374:security-group/sg-09f7461a4bc8b60c8",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f7461a4bc8b60c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_webTraffic",
            "name_prefix": "",
            "owner_id": "271242279374",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5cd154846bea213"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:271242279374:subnet/subnet-042ac7b40aa9885c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-042ac7b40aa9885c2",
            "map_public_ip_on_launch": false,
            "owner_id": "271242279374",
            "tags": {
              "Name": "webapp"
            },
            "vpc_id": "vpc-0e5cd154846bea213"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:271242279374:vpc/vpc-0e5cd154846bea213",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01006745e28e915a4",
            "default_route_table_id": "rtb-0c830cc29531ba32e",
            "default_security_group_id": "sg-0d17443a670d5450c",
            "dhcp_options_id": "dopt-055b40d298d8949de",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e5cd154846bea213",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c830cc29531ba32e",
            "owner_id": "271242279374",
            "tags": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}